components/nonmem/src/output_files/snapshots/nonmem__output_files__tests__run003_parameter_mappings.snap
---
source: components/nonmem/src/output_files/mod.rs
expression: sorted_mappings
input_file: components/nonmem/test_data/run_output/run003/run003.mod
---
[
    (
        "OMEGA(1,1)",
        Some(
            "OM1 (TVCL)",
        ),
    ),
    (
        "OMEGA(2,1)",
        None,
    ),
    (
        "OMEGA(2,2)",
        Some(
            "OM2 (TVV)",
        ),
    ),
    (
        "OMEGA(3,3)",
        Some(
            "OM3 (TVKA)",
        ),
    ),
    (
        "SIGMA(1,1)",
        Some(
            "SIG1",
        ),
    ),
    (
        "SIGMA(2,2)",
        Some(
            "SIG2",
        ),
    ),
    (
        "THETA1",
        Some(
            "TVCL",
        ),
    ),
    (
        "THETA2",
        Some(
            "TVV",
        ),
    ),
    (
        "THETA3",
        Some(
            "TVKA",
        ),
    ),
]
